--- a/search-website-functions-v4/client/src/components/ImageDetails/ImageDetails.css
+++ b/search-website-functions-v4/client/src/components/ImageDetails/ImageDetails.css
@@ -8,3 +8,9 @@
     display: inline;
     list-style: none
   }
+.text-only-button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 16px;
+  }
